--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Profil: Jana Czechita</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	</head>
 	<body>
 
+		
+		
 		<div class="profil">
 
 			<div class="hlavicka">
@@ -18,6 +23,8 @@
 
 			</div>
 
+			
+			
 			<div class="obsah">
 
 				<h1 class="jmeno">Jana Czechita</h1>
@@ -28,10 +35,13 @@
 
 			</div>
 
+			
+			
+			
 			<ul class="odkazy">
-				<li class="portfolio"><a href="#">Moje portfolio</a></li><!--
-				--><li class="facebook"><a href="#">Facebook</a></li><!--
-				--><li class="twitter"><a href="#">Twitter</a></li>
+				<li class="portfolio"><a href="#portfolio">MOJE PORTFOLIO</a></li><!--
+				--><li class="facebook"><a href="#facebook">FACEBOOK</a></li><!--
+				--><li class="twitter"><a href="#twitter">TWITTER</a></li>
 			</ul>
 
 		</div>
